--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Web site created using create-react-app" data-rh="true" />
+		<meta name="google-site-verification" content="GCGu-av4XGpTHCyaWAvceX1qkzK2ofjrp68_lfR0FXs" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<!--
       manifest.json provides metadata used when your web app is installed on a
